--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,6 +6,7 @@ html(lang=`ru`)
 		meta(charset=`utf-8`)
 		meta(name=`viewport` content=`width=device-width, initial-scale=1.0`)
 		title= ``
+		include style
 	body(style=`margin: 0; padding: 0;`)
 		table.wrapper(
 			cellpadding=`0`
@@ -25,6 +26,6 @@ html(lang=`ru`)
 						include blocks/goods
 						tr
 							td
-								span(style=`font-family: ${SEGOE};`)
+								span.text(style=`font-family: ${SEGOE};`)
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda facere quaerat quas vel nesciunt voluptas delectus, laboriosam esse? Eius temporibus, non earum natus<br>voluptatibus sssalias nemo placeat, doloribus neque impedit magni at, officia libero enim maxime omnis nam veniam sunt quasi praesentium ipsam iste. Omnis harum eos,<br>maxime fuga voluptas illo natus.
 				td
