--- a/src/pug/settings.pug
+++ b/src/pug/settings.pug
@@ -1,5 +1,5 @@
 //- fonts
-- const SEGOE = `'Segoe UI', 'Helvetica Neue', Arial, sans-serif`;
+- const SEGOE = `"'Segoe UI', 'Helvetica Neue', Arial, sans-serif"`;
 - const ROBOTO = `'Roboto', 'Segoe UI', Arial, sans-serif`;
 
 
