--- a/src/pug/blocks/preheader.pug
+++ b/src/pug/blocks/preheader.pug
@@ -1,32 +1,38 @@
 tr
 	td.preheader(style=`padding: 0; padding-top: 32px; padding-bottom: 16px;`)
-		table
+		table.table
 			tr.row
 				- for(let x = 0; x < 1; x++)
-					td(class = `col-6 order-${x + 1}`)
-						span.text
+					td(class = `col-12 order-${x + 1}`)
+						span.text.
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo sit facilis quae amet earum ullam dolores quis magnam libero, nemo!
-		table
+		table.table
 			tr.row
 				- for(let x = 0; x < 2; x++)
-					td(class = `col-3 order-${x + 1}`)
-						span.text
+					td(class = `col-6 order-${x + 1}`)
+						span.text.
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo sit facilis quae amet earum ullam dolores quis magnam libero, nemo!
-		table
+		table.table
 			tr.row
 				- for(let x = 0; x < 3; x++)
-					td(class = `col-2 order-${x + 1}`)
-						span.text
+					td(class = `col-4 order-${x + 1}`)
+						span.text.
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo sit facilis quae amet earum ullam dolores quis magnam libero, nemo!
-		table
+		table.table
 			tr.row
 				- for(let x = 0; x < 6; x++)
-					td(class = `col-1 order-${x + 1}`)
-						span.text
+					td(class = `col-2 order-${x + 1}`)
+						span.text.
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo sit facilis quae amet earum ullam dolores quis magnam libero, nemo!
-		table
+		table.table
 			tr.row
 				- for(let x = 0; x < 2; x++)
-					td(class = `col-${(x == 1) ? '2' : '4'} order-${x + 1}`)
-						span.text
+					td(class = `col-${(x == 1) ? '4' : '8'} order-${x + 1}`)
+						span.text.
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo sit facilis quae amet earum ullam dolores quis magnam libero, nemo!
+		table.table
+			tr.row
+				- for(let x = 0; x < 2; x++)
+					td(class = `col-${(x == 1) ? '8' : '4'} order-${x + 1}`)
+						span.text.
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo sit facilis quae amet earum ullam dolores quis magnam libero, nemo!
